# ghc

./: .gitignore  .gitlab-ci.yml  .gitmodules  aclocal.m4  build-cabal.sh  mmtk-build-fibo.sh  mmtk-build-ghc.sh  mmtk-test.sh
.circleci/images/linters/: Dockerfile
.gitlab/: ci.sh  gen_ci.hs  jobs.yaml
.gitlab/generate-ci/: gen_ci.hs
compiler/: CodeGen.Platform.h
compiler/GHC/: CmmToC.hs
compiler/GHC/Cmm/: CLabel.hs  Expr.hs  LayoutStack.hs  Lexer.x  Parser.y  Utils.hs
compiler/GHC/Driver/: Session.hs
compiler/GHC/Iface/: Recomp.hs
compiler/GHC/Platform/: Ways.hs
compiler/GHC/Rename/: HsType.hs
compiler/GHC/StgToCmm/: CgUtils.hs  Foreign.hs  Heap.hs  Monad.hs  Utils.hs
compiler/GHC/Unit/: Info.hs
compiler/backpack/: RnModIface.hs
compiler/codeGen/: StgCmmExpr.hs
compiler/coreSyn/: CoreFVs.hs  CoreLint.hs
compiler/iface/: IfaceSyn.hs  IfaceType.hs  TcIface.hs  ToIface.hs
compiler/main/: DriverPipeline.hs
compiler/typecheck/: TcHsSyn.hs  TcHsType.hs  TcUnify.hs
compiler/types/: OptCoercion.hs
hadrian/src/: UserSettings.hs  Way.hs
hadrian/src/Rules/: Rts.hs
rts/: Arena.c  Capability.c  Capability.h  Heap.c  HeapStackCheck.cmm  Printer.c  RtsAPI.c  RtsFlags.c  RtsStartup.c  RtsSymbols.c  RtsUtils.c  Schedule.c  Stats.c  StgStartup.cmm  Task.c  Task.h  Threads.c  Updates.h  Weak.c  ghc.mk  rts.cabal.in
rts/adjustor/: NativePowerPC.c  Nativei386.c
rts/include/: Cmm.h  Rts.h  mmtk.h
rts/mmtk/mmtk/: Cargo.toml  build.rs
rts/mmtk/mmtk/src/: active_plan.rs  api.rs  binding.rs  collection.rs  edges.rs  ghc.rs  lib.rs  object_model.rs  object_scanning.rs  reference_glue.rs  scanning.rs  stg_closures.rs  stg_info_table.rs  test.rs  types.rs  util.rs  weak_proc.rs
rts/mmtk/mmtk/src/tests/fixtures/: mod.rs
rts/sm/: BlockAlloc.c  CheckGc.cpp  Compact.c  GC.c  GC.h  MarkWeak.c  NonMoving.c  Sanity.c  Scav.c  Storage.c  Storage.h
rules/: distdir-way-opts.mk
small_tests/: test_all.sh  test_one.sh
small_tests/haskell_tests/: fibo.hs  hello_thread.hs
testsuite/config/: ghc
testsuite/driver/: testlib.py
utils/check-exact/: ExactPrint.hs
utils/deriveConstants/: Main.hs
(+14 files in other folders)
