[package]
name = "mmtk_ghc"
version = "0.0.1"
authors = [" <>"]
edition = "2021"

[lib]
name = "mmtk_ghc"
# be careful - LTO is only allowed for certain crate types
crate-type = ["staticlib"]

[profile.dev]
opt-level = 1
overflow-checks = true
debug = true
debug-assertions = true
lto = false

[profile.release]
lto = true

[package.metadata.ghc]
ghc_repo = "https://gitlab.haskell.org/ghc/ghc"

[build-dependencies]
bindgen = "0.63.0"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
atomic_refcell = "0.1.7"
# mmtk = { git = "https://github.com/mmtk/mmtk-core.git", rev = "cd6d8984c10c294c991dcd5f154ce41073c06ab9" }
# Uncomment the following to build locally
mmtk = { path = "../mmtk-core", features=["immix_no_defrag", "work_packet_stats", "immix_zero_on_release"] }

[features]
default = []
is_mmtk_object = ["mmtk/is_mmtk_object"]
nogc = []
